# scrapy-waitrequests

./: README.md  pyproject.toml
