[tool.poetry]
name = "scrapy-algova"
version = "0.1.3"
description = "A small extension to Scrapy that provides a WaitRequest for delayed/polling requests."
authors = ["Alonso Valdiva <alonso@algova.dev>"]
readme = "README.md"

license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^2.8.0"
twisted = "^22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
# etc.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"